[package]
name = "nannou-live"
version = "0.1.0"
edition = "2021"

[dependencies]
nannou = "0.19"
anyhow = "1"
log = "0.4"
env_logger = "0.11"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rosc = { version = "0.11", optional = true }
cpal = "0.15"
rustfft = "6"

[features]
default = []
osc = ["rosc"]
